--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
     <div class="intro center_dis">
         <img class="intro_img tagline" src="img/intro/i2.png" alt="">
-        <h1 class="ci2 fz_300 tagline">หากตอนนี้คุณมีเงินอยู่ <span class="fz_600">$4s00 Billion</span></h1>
+        <h1 class="ci2 fz_300 tagline">หากตอนนี้คุณมีเงินอยู่ <span class="fz_600">$200 Billion</span></h1>
     </div>
     <div class="intro center_dis">
         <img class="intro_img tagline" src="img/intro/i3.png" alt="">
