del- num in board

--- a/boardgame.html
+++ b/boardgame.html
@@ -68,16 +68,16 @@
                     <div class="pt-5 row">
                         <div class="col-3"></div>
                         <div class="col-1 chs4 border1" id="pos0">start</div>
-                        <div class="col-1 chs1 border1" id="pos1">1</div>
+                        <div class="col-1 chs1 border1" id="pos1"></div>
                         <div class="col-1 chs2 border1" id="pos2"
                             style="background-image : url('img/modals/p2.svg');background-repeat: no-repeat;background-attachment: cover;">
                         </div>
-                        <div class="col-1 chs3 border1" id="pos3">3</div>
-                        <div class="col-1 chs2 border1" id="pos4">4</div>
+                        <div class="col-1 chs3 border1" id="pos3"></div>
+                        <div class="col-1 chs2 border1" id="pos4"></div>
                         <div class="col-1 chs4 border1" id="pos5"
                             style="background-image : url('img/modals/p5.svg');background-repeat: no-repeat;background-attachment: cover;">
                         </div>
-                        <div class="col-1 chs1 border1" id="pos6">6</div>
+                        <div class="col-1 chs1 border1" id="pos6"></div>
                         <div class="col-1 chs3 border2" style="border-top-right-radius: 100%;"></div>
                         <div class="col-1"></div>
                     </div>
@@ -86,7 +86,7 @@
 
                     <div class="row">
                         <div class="col-10"></div>
-                        <div class="col-1 chs3 border3" id="pos7">7</div>
+                        <div class="col-1 chs3 border3" id="pos7"></div>
                         <div class="col-1"></div>
                     </div>
 
@@ -95,14 +95,14 @@
                     <div class="row">
                         <div class="col-1"></div>
                         <div class="col-1 chs2 border5" style="border-top-left-radius: 100%;"></div>
-                        <div class="col-1 chs1 border6" id="pos15">15</div>
-                        <div class="col-1 chs2 border1" id="pos14">14</div>
-                        <div class="col-1 chs4 border1" id="pos13">13</div>
-                        <div class="col-1 chs3 border1" id="pos12">12</div>
-                        <div class="col-1 chs1 border1" id="pos11">11</div>
-                        <div class="col-1 chs2 border1" id="pos10">10</div>
-                        <div class="col-1 chs4 border1" id="pos9">9</div>
-                        <div class="col-1 chs1 border1" id="pos8">8</div>
+                        <div class="col-1 chs1 border6" id="pos15"></div>
+                        <div class="col-1 chs2 border1" id="pos14"></div>
+                        <div class="col-1 chs4 border1" id="pos13"></div>
+                        <div class="col-1 chs3 border1" id="pos12"></div>
+                        <div class="col-1 chs1 border1" id="pos11"></div>
+                        <div class="col-1 chs2 border1" id="pos10"></div>
+                        <div class="col-1 chs4 border1" id="pos9"></div>
+                        <div class="col-1 chs1 border1" id="pos8"></div>
                         <div class="col-1 chs3 border4" style="border-bottom-right-radius: 100%;"></div>
                         <div class="col-1" id="pos12"></div>
                     </div>
@@ -111,15 +111,15 @@
 
                     <div class="row">
                         <div class="col-1"></div>
-                        <div class="col-1 chs2 border3" id="pos16">16</div>
+                        <div class="col-1 chs2 border3" id="pos16"></div>
                         <div class="col-10"></div>
                     </div>
 
                     <div class="row">
                         <div class="col-1"></div>
                         <div class="col-1 chs2 border4" style="border-bottom-left-radius: 100%;"></div>
-                        <div class="col-1 chs3 border6" id="pos17">17</div>
-                        <div class="col-1 chs1 border1" id="pos18">18</div>
+                        <div class="col-1 chs3 border6" id="pos17"></div>
+                        <div class="col-1 chs1 border1" id="pos18"></div>
                         <div class="col-1 chs4 border0" id="pos19" style="border-top-right-radius: 100%;">19</div>
                     </div>
 
@@ -127,7 +127,7 @@
 
                     <div class="row">
                         <div class="col-4"></div>
-                        <div class="col-1 chs3 border4" id="pos20">20</div>
+                        <div class="col-1 chs3 border4" id="pos20"></div>
                     </div>
                 </div>
             </div>
