--- a/boardgame.html
+++ b/boardgame.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dice Big Project</title>
+    <title>Dice Big</title>
 
     <!-- Vue -->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -120,7 +120,7 @@
                         <div class="col-1 chs2 border4" style="border-bottom-left-radius: 100%;"></div>
                         <div class="col-1 chs3 border6" id="pos17"></div>
                         <div class="col-1 chs1 border1" id="pos18"></div>
-                        <div class="col-1 chs4 border0" id="pos19" style="border-top-right-radius: 100%;">19</div>
+                        <div class="col-1 chs4 border0" id="pos19" style="border-top-right-radius: 100%;"></div>
                     </div>
 
                     <!--------------------------------------------------------------------- row5 -->
