--- a/boardgame.html
+++ b/boardgame.html
@@ -67,7 +67,7 @@
 
                     <div class="pt-5 row">
                         <div class="col-3"></div>
-                        <div class="col-1 chs4 border1" id="pos0">start</div>
+                        <div class="col-1 chs4 border1" id="pos0" style="background-image : url('img/boards/start.svg');background-repeat: no-repeat;background-size: contain;background-position: center;">start</div>
                         <div class="col-1 chs1 border1" id="pos1"></div>
                         <div class="col-1 chs2 border1" id="pos2"
                             style="background-image : url('img/modals/p2.svg');background-repeat: no-repeat;background-attachment: cover;">
@@ -86,7 +86,7 @@
 
                     <div class="row">
                         <div class="col-10"></div>
-                        <div class="col-1 chs3 border3" id="pos7"></div>
+                        <div class="col-1 chs3 border3" id="pos7" style="background-image : url('img/modals/p7.svg');background-repeat: no-repeat;background-attachment: cover;"></div>
                         <div class="col-1"></div>
                     </div>
 
@@ -127,7 +127,7 @@
 
                     <div class="row">
                         <div class="col-4"></div>
-                        <div class="col-1 chs3 border4" id="pos20"></div>
+                        <div class="col-1 chs3 border4" id="pos20" style="background-image : url('img/boards/finish_line.svg');background-repeat: no-repeat;background-size: contain;background-position: center;"></div>
                     </div>
                 </div>
             </div>
