--- a/boardgame.html
+++ b/boardgame.html
@@ -96,12 +96,12 @@
                         <div class="col-1"></div>
                         <div class="col-1 chs2 border5" style="border-top-left-radius: 100%;"></div>
                         <div class="col-1 chs1 border6" id="pos15"></div>
-                        <div class="col-1 chs2 border1" id="pos14"></div>
+                        <div class="col-1 chs2 border1" id="pos14" style="background-image : url('img/modals/p14.svg');background-repeat: no-repeat;background-attachment: cover;"></div>
                         <div class="col-1 chs4 border1" id="pos13"></div>
                         <div class="col-1 chs3 border1" id="pos12"></div>
                         <div class="col-1 chs1 border1" id="pos11"></div>
-                        <div class="col-1 chs2 border1" id="pos10"></div>
-                        <div class="col-1 chs4 border1" id="pos9"></div>
+                        <div class="col-1 chs2 border1" id="pos10" style="background-image : url('img/modals/p10.svg');background-repeat: no-repeat;background-attachment: cover;"></div>
+                        <div class="col-1 chs4 border1" id="pos9" ></div>
                         <div class="col-1 chs1 border1" id="pos8"></div>
                         <div class="col-1 chs3 border4" style="border-bottom-right-radius: 100%;"></div>
                         <div class="col-1" id="pos12"></div>
@@ -111,7 +111,7 @@
 
                     <div class="row">
                         <div class="col-1"></div>
-                        <div class="col-1 chs2 border3" id="pos16"></div>
+                        <div class="col-1 chs2 border3" id="pos16" style="background-image : url('img/modals/p16.svg');background-repeat: no-repeat;background-attachment: cover;"></div>
                         <div class="col-10"></div>
                     </div>
 
