--- a/boardgame.html
+++ b/boardgame.html
@@ -102,7 +102,7 @@
                         <div class="col-1 chs1 border1" id="pos11"></div>
                         <div class="col-1 chs2 border1" id="pos10" style="background-image : url('img/modals/p10.svg');background-repeat: no-repeat;background-attachment: cover;"></div>
                         <div class="col-1 chs4 border1" id="pos9" ></div>
-                        <div class="col-1 chs1 border1" id="pos8"></div>
+                        <div class="col-1 chs1 border1" id="pos8" style="background-image : url('img/modals/p8.svg');background-repeat: no-repeat;background-attachment: cover;"></div>
                         <div class="col-1 chs3 border4" style="border-bottom-right-radius: 100%;"></div>
                         <div class="col-1" id="pos12"></div>
                     </div>
@@ -119,7 +119,7 @@
                         <div class="col-1"></div>
                         <div class="col-1 chs2 border4" style="border-bottom-left-radius: 100%;"></div>
                         <div class="col-1 chs3 border6" id="pos17"></div>
-                        <div class="col-1 chs1 border1" id="pos18"></div>
+                        <div class="col-1 chs1 border1" id="pos18" style="background-image : url('img/modals/p18.svg');background-repeat: no-repeat;background-attachment: cover;"></div>
                         <div class="col-1 chs4 border0" id="pos19" style="border-top-right-radius: 100%;"></div>
                     </div>
 
