--- a/boardgame.html
+++ b/boardgame.html
@@ -200,9 +200,16 @@
                             <img class="sunray rotating" src="img/modals/sunray1.png">
                             <img class="modalImg center_dis bounce" src="img/modals/ResultLabel.svg">
                         </div>
-                        <h5 class="text-align-center">งบประมาณที่คุณใช้ไป</h5>
-                        <h5 class="text-align-center">เหลืองบในจินตนาการ</h5>
-                        <h5 class="text-align-center">badge ที่คุณได้รับ</h5>
+
+                        <div class="row">
+                            <div class="col-4"></div>
+                            <div class="col-4">
+                                <h5 class="text-align-center">งบประมาณที่คุณใช้ไป</h5>
+                                <h5 class="text-align-center">เหลืองบในจินตนาการ</h5>
+                                <h5 class="text-align-center">badge ที่คุณได้รับ</h5>
+                            </div>
+                            <div class="col-4"></div>
+                        </div>
                         <button class="btn btn-success" onClick="window.location.href=window.location.href">เล่นอีกครั้ง</button>
                     </div>
                 </div>
