--- a/boardgame.html
+++ b/boardgame.html
@@ -47,7 +47,7 @@
 
                     <div class="dice mt-5">
                         <!-- Dice -->
-                        <a @click="roll" data-toggle="modal" data-target="#staticBackdrop">
+                        <a @click="roll">
                             <img id="dice" src="img/dice/d1.svg">
                         </a>
                     </div>
@@ -57,7 +57,7 @@
                 <!------------------------------------------------------------------------------>
                 <!--------------------------------------------------------------------- Board -->
 
-                <div class="col-md-9">
+                <div class="pt-5 col-md-9">
 
                     <!--------------------------------------------------------------------- row1 -->
 
@@ -65,14 +65,14 @@
                         <div class="col-3"></div>
                         <div class="col-1 chs4 border1" id="pos0" style="background-image : url('img/boards/start.svg');background-repeat: no-repeat;background-size: contain;background-position: center;">
                             start</div>
-                        <div class="col-1 chs1 border1" id="pos1"></div>
-                        <div class="col-1 chs2 border1" id="pos2" style="background-image : url('img/modals/p2.svg');background-repeat: no-repeat;background-attachment: cover;">
+                        <div class="col-1 chs1 border1" id="pos1" style="background-image : url('img/modals/p1.svg');"></div>
+                        <div class="col-1 chs2 border1 boardImg" id="pos2" style="background-image : url('img/modals/p2.svg');">
                         </div>
-                        <div class="col-1 chs3 border1" id="pos3"></div>
-                        <div class="col-1 chs2 border1" id="pos4"></div>
-                        <div class="col-1 chs4 border1" id="pos5" style="background-image : url('img/modals/p5.svg');background-repeat: no-repeat;background-attachment: cover;">
+                        <div class="col-1 chs3 border1" id="pos3" style="background-image : url('img/modals/p3.svg');"></div>
+                        <div class="col-1 chs2 border1" id="pos4" style="background-image : url('img/modals/p4.svg');"></div>
+                        <div class="col-1 chs4 border1 boardImg" id="pos5" style="background-image : url('img/modals/p5.svg');">
                         </div>
-                        <div class="col-1 chs1 border1" id="pos6"></div>
+                        <div class="col-1 chs1 border1" id="pos6" style="background-image : url('img/modals/p6.svg');"></div>
                         <div class="col-1 chs3 border2" style="border-top-right-radius: 100%;"></div>
                         <div class="col-1"></div>
                     </div>
@@ -81,7 +81,7 @@
 
                     <div class="row">
                         <div class="col-10"></div>
-                        <div class="col-1 chs3 border3" id="pos7" style="background-image : url('img/modals/p7.svg');background-repeat: no-repeat;background-attachment: cover;">
+                        <div class="col-1 chs3 border3 boardImg" id="pos7" style="background-image : url('img/modals/p7.svg');">
                         </div>
                         <div class="col-1"></div>
                     </div>
@@ -91,16 +91,16 @@
                     <div class="row">
                         <div class="col-1"></div>
                         <div class="col-1 chs2 border5" style="border-top-left-radius: 100%;"></div>
-                        <div class="col-1 chs1 border6" id="pos15"></div>
-                        <div class="col-1 chs2 border1" id="pos14" style="background-image : url('img/modals/p14.svg');background-repeat: no-repeat;background-attachment: cover;">
+                        <div class="col-1 chs1 border6" id="pos15" style="background-image : url('img/modals/p15.svg');"></div>
+                        <div class="col-1 chs2 border1 boardImg" id="pos14" style="background-image : url('img/modals/p14.svg');">
                         </div>
-                        <div class="col-1 chs4 border1" id="pos13"></div>
-                        <div class="col-1 chs3 border1" id="pos12"></div>
-                        <div class="col-1 chs1 border1" id="pos11"></div>
-                        <div class="col-1 chs2 border1" id="pos10" style="background-image : url('img/modals/p10.svg');background-repeat: no-repeat;background-attachment: cover;">
+                        <div class="col-1 chs4 border1" id="pos13" style="background-image : url('img/modals/p13.svg');"></div>
+                        <div class="col-1 chs3 border1" id="pos12" style="background-image : url('img/modals/p12.svg');"></div>
+                        <div class="col-1 chs1 border1" id="pos11" style="background-image : url('img/modals/p11.svg');"></div>
+                        <div class="col-1 chs2 border1 boardImg" id="pos10" style="background-image : url('img/modals/p10.svg');">
                         </div>
-                        <div class="col-1 chs4 border1" id="pos9"></div>
-                        <div class="col-1 chs1 border1" id="pos8" style="background-image : url('img/modals/p8.svg');background-repeat: no-repeat;background-attachment: cover;">
+                        <div class="col-1 chs4 border1" id="pos9" style="background-image : url('img/modals/p9.svg');"></div>
+                        <div class="col-1 chs1 border1 boardImg" id="pos8" style="background-image : url('img/modals/p8.svg');">
                         </div>
                         <div class="col-1 chs3 border4" style="border-bottom-right-radius: 100%;"></div>
                         <div class="col-1" id="pos12"></div>
@@ -110,7 +110,7 @@
 
                     <div class="row">
                         <div class="col-1"></div>
-                        <div class="col-1 chs2 border3" id="pos16" style="background-image : url('img/modals/p16.svg');background-repeat: no-repeat;background-attachment: cover;">
+                        <div class="col-1 chs2 border3 boardImg" id="pos16" style="background-image : url('img/modals/p16.svg');">
                         </div>
                         <div class="col-10"></div>
                     </div>
@@ -118,10 +118,10 @@
                     <div class="row">
                         <div class="col-1"></div>
                         <div class="col-1 chs2 border4" style="border-bottom-left-radius: 100%;"></div>
-                        <div class="col-1 chs3 border6" id="pos17"></div>
-                        <div class="col-1 chs1 border1" id="pos18" style="background-image : url('img/modals/p18.svg');background-repeat: no-repeat;background-attachment: cover;">
+                        <div class="col-1 chs3 border6" id="pos17" style="background-image : url('img/modals/p17.svg');"></div>
+                        <div class="col-1 chs1 border1 boardImg" id="pos18" style="background-image : url('img/modals/p18.svg');">
                         </div>
-                        <div class="col-1 chs4 border0" id="pos19" style="border-top-right-radius: 100%;"></div>
+                        <div class="col-1 chs4 border0" id="pos19" style="background-image : url('img/modals/p20.svg');border-top-right-radius: 100%;"></div>
                     </div>
 
                     <!--------------------------------------------------------------------- row5 -->
@@ -228,8 +228,8 @@
             count: 0,
             index: 0,
             dice: 0,
-            token: 20,
-            tokenState: '20 Token',
+            token: 200,
+            tokenState: '200 Token',
             investState: '',
             popupStatus: 0,
             data: [{
@@ -588,6 +588,9 @@
                     }, 100 * i);
                 }
 
+                setTimeout(function() {
+                    $('#staticBackdrop').modal('show')
+                }, 5000);
 
                 // this.tokenStateFn()
             },
@@ -626,13 +629,6 @@
     }
     // setTimeout(fadeOut, 2000);
     setTimeout(fadeOut, 100);
-
-    // Set delay popup modals
-    $(window).load(function() {
-        setTimeout(function() {
-            $('#myModal').modal('show');
-        }, 500);
-    });
 </script>
 
 </html>
