--- a/boardgame.html
+++ b/boardgame.html
@@ -65,14 +65,14 @@
                         <div class="col-3"></div>
                         <div class="col-1 chs4 border1" id="pos0" style="background-image : url('img/boards/start.svg');background-repeat: no-repeat;background-size: contain;background-position: center;">
                             start</div>
-                        <div class="col-1 chs1 border1" id="pos1" style="background-image : url('img/modals/p1.svg');"></div>
+                        <div class="col-1 chs1 border1 boardImg" id="pos1" style="background-image : url('img/modals/p1.svg');"></div>
                         <div class="col-1 chs2 border1 boardImg" id="pos2" style="background-image : url('img/modals/p2.svg');">
                         </div>
-                        <div class="col-1 chs3 border1" id="pos3" style="background-image : url('img/modals/p3.svg');"></div>
-                        <div class="col-1 chs2 border1" id="pos4" style="background-image : url('img/modals/p4.svg');"></div>
+                        <div class="col-1 chs3 border1 boardImg" id="pos3" style="background-image : url('img/modals/p3.svg');"></div>
+                        <div class="col-1 chs2 border1 boardImg" id="pos4" style="background-image : url('img/modals/p4.svg');"></div>
                         <div class="col-1 chs4 border1 boardImg" id="pos5" style="background-image : url('img/modals/p5.svg');">
                         </div>
-                        <div class="col-1 chs1 border1" id="pos6" style="background-image : url('img/modals/p6.svg');"></div>
+                        <div class="col-1 chs1 border1 boardImg" id="pos6" style="background-image : url('img/modals/p6.svg');"></div>
                         <div class="col-1 chs3 border2" style="border-top-right-radius: 100%;"></div>
                         <div class="col-1"></div>
                     </div>
@@ -91,15 +91,15 @@
                     <div class="row">
                         <div class="col-1"></div>
                         <div class="col-1 chs2 border5" style="border-top-left-radius: 100%;"></div>
-                        <div class="col-1 chs1 border6" id="pos15" style="background-image : url('img/modals/p15.svg');"></div>
+                        <div class="col-1 chs1 border6 boardImg" id="pos15" style="background-image : url('img/modals/p15.svg');"></div>
                         <div class="col-1 chs2 border1 boardImg" id="pos14" style="background-image : url('img/modals/p14.svg');">
                         </div>
-                        <div class="col-1 chs4 border1" id="pos13" style="background-image : url('img/modals/p13.svg');"></div>
-                        <div class="col-1 chs3 border1" id="pos12" style="background-image : url('img/modals/p12.svg');"></div>
-                        <div class="col-1 chs1 border1" id="pos11" style="background-image : url('img/modals/p11.svg');"></div>
+                        <div class="col-1 chs4 border1 boardImg" id="pos13" style="background-image : url('img/modals/p13.svg');"></div>
+                        <div class="col-1 chs3 border1 boardImg" id="pos12" style="background-image : url('img/modals/p12.svg');"></div>
+                        <div class="col-1 chs1 border1 boardImg" id="pos11" style="background-image : url('img/modals/p11.svg');"></div>
                         <div class="col-1 chs2 border1 boardImg" id="pos10" style="background-image : url('img/modals/p10.svg');">
                         </div>
-                        <div class="col-1 chs4 border1" id="pos9" style="background-image : url('img/modals/p9.svg');"></div>
+                        <div class="col-1 chs4 border1 boardImg" id="pos9" style="background-image : url('img/modals/p9.svg');"></div>
                         <div class="col-1 chs1 border1 boardImg" id="pos8" style="background-image : url('img/modals/p8.svg');">
                         </div>
                         <div class="col-1 chs3 border4" style="border-bottom-right-radius: 100%;"></div>
@@ -118,17 +118,17 @@
                     <div class="row">
                         <div class="col-1"></div>
                         <div class="col-1 chs2 border4" style="border-bottom-left-radius: 100%;"></div>
-                        <div class="col-1 chs3 border6" id="pos17" style="background-image : url('img/modals/p17.svg');"></div>
+                        <div class="col-1 chs3 border6 boardImg" id="pos17" style="background-image : url('img/modals/p17.svg');"></div>
                         <div class="col-1 chs1 border1 boardImg" id="pos18" style="background-image : url('img/modals/p18.svg');">
                         </div>
-                        <div class="col-1 chs4 border0" id="pos19" style="background-image : url('img/modals/p20.svg');border-top-right-radius: 100%;"></div>
+                        <div class="col-1 chs4 border0 boardImg" id="pos19" style="background-image : url('img/modals/p20.svg');border-top-right-radius: 100%;"></div>
                     </div>
 
                     <!--------------------------------------------------------------------- row5 -->
 
                     <div class="row">
                         <div class="col-4"></div>
-                        <div class="col-1 chs3 border4" id="pos20" style="background-image : url('img/boards/finish_line.svg');background-repeat: no-repeat;background-size: contain;background-position: center;">
+                        <div class="col-1 chs3 border4 boardImg" id="pos20" style="background-image : url('img/boards/finish_line.svg');background-repeat: no-repeat;background-size: contain;background-position: center;">
                         </div>
                     </div>
                 </div>
@@ -570,6 +570,7 @@
             //     this.tokenUsed = this.data[this.count - 1].token
 
             // New Random Rolling Dice Function
+
             roll: function() {
                 const ROLLING_NUMBER = 5;
                 var randomNumber = Math.floor(Math.random() * 6) + 1;
