--- a/boardgame.html
+++ b/boardgame.html
@@ -193,22 +193,18 @@
                         <br>
                         <div class="row">
                             <div class="col-3"></div>
-                            <div class="col-6">
-                                <img class="invest_img center_dis" :src="'img/badge/'+data[index].img.badge_img">
+                            <div class="col-3">
+                                <div class="row">
+                                    <div class="col-2">
+                                        <img class="invest_img center_dis" :src="'img/badge/'+data[index].img.badge_img">
+                                    </div>
+                                    <div class="col-10">
+                                        <p class="modalInvest_destail text-center">{{ data[index].badge }}</p>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="col-3"></div>
-                        </div>
-                        <div class="row">
-                            <div class="col-3"></div>
-                            <div class="col-6">
-                                <img class="invest_img center_dis" :src="'img/badge/'+data[index].img.badge_img">
-                            </div>
-                            <div class="col-3"></div>
-                        </div>
-                        <div class="row">
-                            <div class="col-3"></div>
-                            <div class="col-6">
-                                <img class="invest_img center_dis" :src="'img/badge/'+data[index].img.badge_img">
+                            <div class="col-3">
+                                <img class="invest_img center_dis" src="img/modals/">
                             </div>
                             <div class="col-3"></div>
                         </div>
@@ -250,7 +246,7 @@
             index: 0,
             dice: 0,
             token: 230,
-            tokenState: '200 Token',
+            tokenState: '230 Token',
             investState: '',
             popupStatus: 0,
             point: 0,
